--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Weather App</string>
     <string name="error_message">Something went wrong on our side.\nWould you like to give another try?</string>
+    <string name="location_permission_denied_error_message">Location permission is needed to display weather information of your current location.\n Would you like to enable it?</string>
 </resources>
